# moe-serifu-agent

./: .drone.yml  .gitignore  .travis.yml  .valgrindrc  Makefile  README.md  msa.cfg  squid.squid
python/: Pipfile  README.md  config.py  expander_test.py  monitor.sh  msa_config.json  pyproject.toml  rtd-requirements.txt  test_and_coverage.sh  things-to-do.txt
python/.github/: pull_request_template.md
python/msa/: __main__.py  config.py  coroutine.py  event.py  main.py  modes.py  module.py  prompt.py  supervisor.py  var.py  version.py  wrapper.py
python/msa/api/: __init__.py  api_clients.py  base_methods.py  context.py  patchable_api.py  patcher.py
python/msa/cli/: interpreter.py
python/msa/cmd/: __init__.py  default_commands.py
python/msa/core/: __init__.py  config_manager.py  event.py  event_bus.py  event_handler.py  loader.py  supervisor.py  timer.py
python/msa/data/: __init__.py
python/msa/event/: event.py  handler.py  handler_sync.py
python/msa/remote/: client.py  generic_producer_consumer.py  server.py
python/msa/server/: __init__.py  connection_types.py  default_routes.py  event_propagate.py  route_adapter.py  server_request.py  server_response.py  url_param_parser.py
python/msa/tools/: msa_rest_client_loader.py
python/msa/utils/: asyncio_utils.py
python/sphinx/: Makefile  architecture.md  builtin_commands.md  changelog.md  conf.py  configuration.md  contributor_guide.md  getting_started.md  index.rst  installation.md  modules.rst  plugin_development.md  plugins.md  update_api_dir.sh  using_the_cli.md
python/sphinx/api/: msa.api.rst  msa.builtins.command.rst  msa.builtins.command_registry.rst  msa.builtins.conversation.rst  msa.builtins.echo.rst  msa.builtins.intents.rst  msa.builtins.rst  msa.builtins.scripting.rst  msa.builtins.signals.rst  msa.builtins.time.rst  msa.builtins.tty.rst  msa.cli.rst  msa.core.rst  msa.data.rst  msa.plugins.notifications.rst  msa.plugins.rss_feed.rst  msa.plugins.rst  msa.rst  msa.server.rst  msa.tools.rst  msa.utils.rst
python/terminal_client/: __main__.py
python/tests/: ConfigTest.py  ExpanderTest.py  async_test_util.py  expander_test.py  test.cfg
python/tests/api/: api_clients_test.py  init_test.py  patchable_api_test.py  patcher_test.py
python/tests/core/: config_manager_test.py  event_bus_test.py  (+3 more)
(+220 files in other folders)
